--- a/index.html
+++ b/index.html
@@ -11,16 +11,28 @@
     <link rel="import" href="components/ab-widgetslist/index.html">
     <link rel="import" href="components/ab-container/index.html">
     <link rel="import" href="components/ab-widget/index.html">
+    <link rel="import" href="components/ab-grid/index.html">
     <!-- Widgets -->
     <link rel="import" href="widgets/widget-text/widget-text.html">
     <link rel="import" href="widgets/widget-timeline/widget-timeline.html">
   </head>
   <body unresolved>
-    <div id="container">
+    <!--<div id="container">
       <ab-widgetslist id="widgets" class="block"></ab-widgetslist>
       <ab-menu id="menu" class="block"></ab-menu>
       <ab-workspace id="workspace" class="block"></ab-workspace>
-    </div>
+    </div>-->
+
+    <ab-grid style="width: 800px; height: 600px">
+      <div data-width="3" data-height="2">1</div>
+      <div data-height="2">2</div>
+      <div>3</div>
+      <div data-width="5" data-height="3">4</div>
+      <div>5</div>
+      <div data-height="5">6</div>
+      <div>7</div>
+      <div>8</div>
+    </ab-grid>
 
     <!--<a href="#" onclick="toggleMode()">Toggle edition mode</a>
 
