ab-grid: resizable elements + gutter

--- a/index.html
+++ b/index.html
@@ -23,15 +23,18 @@
       <ab-workspace id="workspace" class="block"></ab-workspace>
     </div>-->
 
-    <ab-grid style="width: 800px; height: 600px">
-      <div data-width="3" data-height="2">1</div>
-      <div data-height="2">2</div>
+    <ab-grid style="width: 800px; height: 800px" columns="10" rows="10">
+      <div>1</div>
+      <div>2</div>
       <div>3</div>
-      <div data-width="5" data-height="3">4</div>
+      <div data-grid-width="2" data-grid-height="4">4</div>
       <div>5</div>
-      <div data-height="5">6</div>
+      <div>6</div>
       <div>7</div>
       <div>8</div>
+      <div>9</div>
+      <div>10</div>
+      <div>11</div>
     </ab-grid>
 
     <!--<a href="#" onclick="toggleMode()">Toggle edition mode</a>
