--- a/index.html
+++ b/index.html
@@ -2,35 +2,32 @@
   <head>
     <script src="bower_components/platform/platform.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="app-template/style.css">
+    <!-- Fonts -->
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
     <!-- Components -->
     <link rel="import" href="bower_components/polymer/polymer.html">
-    <link rel="import" href="components/ab-filesystem/index.html">
-    <link rel="import" href="components/ab-workspace/index.html">
-    <link rel="import" href="components/ab-widgetslist/index.html">
-    <link rel="import" href="components/ab-widget/index.html">
-    <link rel="import" href="components/ab-tabpanel/index.html">
-    <link rel="import" href="components/ab-appmenu/index.html">
-    <link rel="import" href="components/ab-appsettings/index.html">
+    <link rel="import" href="components/index.html">
     <!-- Widgets -->
-    <link rel="import" href="widgets/widget-text/widget-text.html">
-    <link rel="import" href="widgets/widget-timeline/widget-timeline.html">
+    <link rel="import" href="widgets/index.html">
   </head>
   <body unresolved>
 
     <ab-workspace id="workspace"></ab-workspace>
-    
-    <ab-tabpanel id="start" label="Start">
-      <ab-appmenu></ab-appmenu>
-    </ab-tabpanel>
 
-    <ab-tabpanel id="widgets" label="Widgets">
-      <ab-widgetslist></ab-widgetslist>
-    </ab-tabpanel>
+    <ab-tab-panel id="start" label="Start" icon="rocket">
+      <ab-menu></ab-menu>
+    </ab-tab-panel>
 
-    <ab-tabpanel id="settings" label="Settings">
-      <ab-appsettings></ab-appsettings>
-    </ab-tabpanel>
+    <ab-tab-panel id="widgets" label="Widgets" icon="puzzle-piece">
+      <ab-widgets-list>
+        <ab-widget-item name="Text" tag="widget-text"></ab-widget-item>
+        <ab-widget-item name="Timeline" tag="widget-timeline"></ab-widget-item>
+      </ab-widgets-list>
+    </ab-tab-panel>
+
+    <ab-tab-panel id="settings" label="Settings" icon="gear">
+      <ab-settings></ab-settings>
+    </ab-tab-panel>
 
   </body>
 
