--- a/widgets/widget-text/widget-text.html
+++ b/widgets/widget-text/widget-text.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../../components/ab-widget/ab-widget.html">
 <polymer-element name="widget-text" attributes="options">
   <template>
     <style>
@@ -9,32 +10,19 @@
       :host .edit textarea {
         display: block;
         width: 100%;
+        height: 100%;
       }
 
     </style>
     <ab-widget name="Text">
       <div class="edit">
-        <textarea rows="10" value="{{text}}" placeholder="Enter your text here..."></textarea>
-        <h3>Markdown Syntax</h3>
-        <div>
-<b>Headings</b>
-<pre>
-# Main header
-## Secondary header
-### etc
-</pre>
-<b>Unordered List</b>
-<pre>
-- First item
-- Second item
-- etc
-</pre>
-        </div>
+        <textarea rows="10" value="{{text}}">
+        </textarea>
       </div>
       <div id="text" class="view"></div>
     </ab-widget>
   </template>
-  <script type="text/javascript" src="vendor/marked.js"></script>
+  <script type="text/javascript" src="vendor/marked.min.js"></script>
   <script>
     Polymer('widget-text', {
 
