--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
   </head>
   <body unresolved>
 
+    <ab-menu id="menu"></ab-menu>
     <ab-workspace id="workspace"></ab-workspace>
-
-    <ab-tab-panel id="start" label="Start" icon="rocket">
-      <ab-menu></ab-menu>
-    </ab-tab-panel>
 
     <ab-tab-panel id="widgets" label="Widgets" icon="puzzle-piece">
       <ab-widgets-list>
