Fix new project app bug

--- a/app-template/index.html
+++ b/app-template/index.html
@@ -9,6 +9,6 @@
     <link rel="import" href="widgets/index.html">
   </head>
   <body unresolved>
-    <ab-app id="app"></ab-app>
+    <ab-app id="app" manifestUrl="./manifest.json"></ab-app>
   </body>
 </html>
