Base librairie de fichiers + gallerie

--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
       <ab-widgets-list>
         <ab-widget-item name="Text" tag="widget-text"></ab-widget-item>
         <ab-widget-item name="Timeline" tag="widget-timeline"></ab-widget-item>
+        <ab-widget-item name="Media Gallery" tag="widget-media-gallery"></ab-widget-item>
       </ab-widgets-list>
     </ab-tab-panel>
 
     <ab-tab-panel id="settings" label="Settings" icon="gear">
       <ab-settings></ab-settings>
+    </ab-tab-panel>
+
+    <ab-tab-panel id="library" label="Library" icon="photo">
+      <ab-library></ab-library>
     </ab-tab-panel>
 
   </body>
