--- a/widgets/index.html
+++ b/widgets/index.html
@@ -1,2 +1,3 @@
 <link rel="import" href="widget-text/widget-text.html">
 <link rel="import" href="widget-timeline/widget-timeline.html">
+<link rel="import" href="widget-media-gallery/widget-media-gallery.html">
