--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <ng-view></ng-view>
+    <input style="display:none;" id="_dirSelector" type="file" nwdirectory />
     <script src="bower_components/es6-module-loader/dist/es6-module-loader.js"></script>
     <script src="bower_components/system.js/dist/system.js"></script>
     <script>
