--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html ng-app="AppBuilder" ng-cloak ng-controller="MainCtrl">
   <head>
+    <meta charset="utf8">
     <title ng-bind="appTitle"></title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
